kubernetes-networks/canary/web-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: staging
  labels:
    app: web
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: app
        emptyDir: {}
      containers:
      - name: web
        image: sergetol/nginx:1.20.2-alpine
        ports:
        - containerPort: 8000
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          tcpSocket:
            port: 8000
        readinessProbe:
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          httpGet:
            port: 8000
            path: /index.html
        volumeMounts:
        - name: app
          mountPath: /app

---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: staging
  labels:
    app: web
spec:
  selector:
    app: web
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: staging
  labels:
    app: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: x-env
    nginx.ingress.kubernetes.io/canary-by-header-value: staging
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /web(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 8000
